--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=no">
         
         <link rel="stylesheet" type="text/css" href="fontawesome.min.css">
         <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
