--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
                                                   Rüzgar Yükleri
                                                 </a>
                                                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                                  <a id="navbeyaz"  class="dropdown-item" href="https://burakakgulll.github.io/ruzgaryuzey/">Yapı Yüzeyine Etkiyen Rüzgar Yükleri</a>
-                                                  <a id="navbeyaz"  class="dropdown-item active" href="#">Tek Eğimli Çatılara Etkiyen Rüzgar Yükleri</a>
-                                                  <a id="navbeyaz"  class="dropdown-item" href="https://burakakgulll.github.io/ciftegimruzgar/">Çift Eğimli Çatılara Etkiyen Rüzgar Yükleri</a>
+                                                  <a style="font-size:12px;" id="navbeyaz"  class="dropdown-item" href="https://burakakgulll.github.io/ruzgaryuzey/">Yapı Yüzeyine Etkiyen Rüzgar Yükleri</a>
+                                                  <a style="font-size:12px;" id="navbeyaz"  class="dropdown-item active" href="#">Tek Eğimli Çatılara Etkiyen Rüzgar Yükleri</a>
+                                                  <a style="font-size:12px;" id="navbeyaz"  class="dropdown-item" href="https://burakakgulll.github.io/ciftegimruzgar/">Çift Eğimli Çatılara Etkiyen Rüzgar Yükleri</a>
                                                 </div>
                                               </li>
                                             </ul>
@@ -90,9 +90,9 @@
                                                   Kar Yükleri
                                                 </a>
                                                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                                  <a id="navbeyaz"  class="dropdown-item active" href="#">---</a>
-                                                  <a id="navbeyaz"  class="dropdown-item" href="#">---</a>
-                                                  <a id="navbeyaz"  class="dropdown-item" href="#">---</a>
+                                                  <a style="font-size:12px;" id="navbeyaz"  class="dropdown-item active" href="#">---</a>
+                                                  <a style="font-size:12px;" id="navbeyaz"  class="dropdown-item" href="#">---</a>
+                                                  <a style="font-size:12px;" id="navbeyaz"  class="dropdown-item" href="#">---</a>
                                                 </div>
                                               </li>
                                             </ul>
