--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                                 
                                               <li class="nav-item dropdown" style="font-size:12px;">
                                                 <a id="navbeyaz"  class="nav-link dropdown-toggle pl-2" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                                  Kar Yükleri
+                                                  Kar Yükleri (TS EN 1991-1-3)
                                                 </a>
                                                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                                   <a style="font-size:12px;" id="navbeyaz"  class="dropdown-item active" href="#">---</a>
